# ZUSI

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
.github/workflows/: build.yml  tests.yml
data/: SUSI Verbindung 2 ver0.16.doc  transmission.pu
examples/: CMakeLists.txt  rx.cpp
examples/zpp_load/: CMakeLists.txt  main.cpp
include/zusi/: buffer.hpp  command.hpp  crc8.hpp  features.hpp  feedback.hpp  mbps.hpp  packet.hpp  response.hpp  utility.hpp  zusi.hpp
include/zusi/rx/: base.hpp
include/zusi/tx/: base.hpp
src/rx/: base.cpp
src/tx/: base.cpp
tests/: CMakeLists.txt  crc8.cpp  cvread.cpp  main.cpp
tests/rx/: cv_read.cpp  encrypt.cpp  erase_zpp.cpp  exit.cpp  rx_mock.hpp  rx_test.cpp  rx_test.hpp  zpp_erase.cpp  zpp_lc_dc_query.cpp
tests/rx_test/: cvread.cpp  mock_zusi.hpp
tests/tx/: cv_read.cpp  cv_write.cpp  erase_zpp.cpp  exit.cpp  features.cpp  tx_mock.hpp  tx_test.cpp  tx_test.hpp  write_zpp.cpp  zpp_erase.cpp  zpp_update.cpp
tests/tx_test/: cvread.cpp  cvwrite.cpp  erasezpp.cpp  exit.cpp  features.cpp  mock_zusi.hpp  writezpp.cpp
